# ModernNews

./: .envSample  .gitignore  LICENSE  Makefile  README.md  compile-data.py  newsapi_section_test.py  pyproject.toml
data_loader/: news_api.py  patch_events.py  patch_news.py  ticketmaster.py
src/: compile-data.py  content_summary.py  event-brite.py  eventbrite.py  news-api.py  patch-events.py  patch-news.py  patch.py  ticketmaster.py
src/filtering/: topic_modeling.py
src/generation/: news-api.py  patch.py
src/selection/: api_selector.py
